// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AMP Korean Live Radio Page A11y I can see the skip to content link 1`] = `"내용 보기"`;

exports[`AMP Korean Live Radio Page AMP Consent config 1`] = `
{
  "consents": {
    "user-consent": {
      "promptIfUnknownForGeoGroup": "eea",
      "promptUI": "consent-prompt",
    },
  },
  "policy": {
    "default": {
      "timeout": {
        "fallbackAction": "reject",
        "seconds": 0,
      },
      "waitFor": {
        "user-consent": [],
      },
    },
  },
}
`;

exports[`AMP Korean Live Radio Page AMP Geo config 1`] = `
{
  "AmpBind": true,
  "ISOCountryGroups": {
    "eea": [
      "at",
      "ax",
      "be",
      "bg",
      "bl",
      "cy",
      "cz",
      "de",
      "dk",
      "ea",
      "ee",
      "es",
      "fi",
      "fr",
      "gb",
      "gf",
      "gg",
      "gi",
      "gp",
      "gr",
      "hr",
      "hu",
      "ic",
      "ie",
      "im",
      "is",
      "it",
      "je",
      "li",
      "lt",
      "lu",
      "lv",
      "mf",
      "mq",
      "mt",
      "nc",
      "nl",
      "no",
      "pf",
      "pl",
      "pm",
      "pt",
      "re",
      "ro",
      "se",
      "si",
      "sj",
      "sk",
      "tf",
      "va",
      "wf",
      "yt",
    ],
    "gbOrUnknown": [
      "gb",
      "gg",
      "im",
      "je",
      "uk",
      "unknown",
    ],
  },
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 1`] = `
{
  "text": "BBC News, 코리아",
  "url": "/korean",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 2`] = `
{
  "text": "BBC News를 신뢰할 수 있는 이유",
  "url": "https://www.bbc.com/korean/institutional-49283197",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 3`] = `
{
  "text": "이용 약관",
  "url": "https://www.bbc.com/usingthebbc/terms/",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 4`] = `
{
  "text": "BBC 소개",
  "url": "https://www.bbc.com/aboutthebbc",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 5`] = `
{
  "text": "개인정보취급방침",
  "url": "https://www.bbc.com/usingthebbc/privacy/",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 6`] = `
{
  "text": "쿠키정책",
  "url": "https://www.bbc.com/usingthebbc/cookies/",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 7`] = `
{
  "text": "고객센터",
  "url": "https://www.bbc.co.uk/korean/send/u50853423",
}
`;

exports[`AMP Korean Live Radio Page Footer Anchors should match text and url 8`] = `
{
  "text": "외부 링크에 대한 본사 정책 보기",
  "url": "https://www.bbc.com/editorialguidelines/guidance/feeds-and-links",
}
`;

exports[`AMP Korean Live Radio Page Footer Cookie Settings Button should match text and on handler 1`] = `
{
  "on": "tap:consent.prompt, privacy.hide, cookie.show, AMP.setState({ isManagingSettings: true })",
  "text": "Do not share or sell my info",
}
`;

exports[`AMP Korean Live Radio Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/korean"`;

exports[`AMP Korean Live Radio Page Footer I can see the footer copyright and external linking text 1`] = `"© 2023 BBC. BBC는 외부 사이트 및 타사 콘텐츠에 대한 책임을 지지 않습니다 외부 링크에 대한 본사 정책 보기"`;

exports[`AMP Korean Live Radio Page Header I can see the branding 1`] = `"BBC News, 코리아"`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 1`] = `
{
  "text": "뉴스",
  "url": "/korean",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 2`] = `
{
  "text": "비디오",
  "url": "/korean/topics/cnwng7v0e54t",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 3`] = `
{
  "text": "라디오",
  "url": "/korean/bbc_korean_radio/programmes/w13xttll",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 4`] = `
{
  "text": "다운로드",
  "url": "/korean/downloads",
}
`;

exports[`AMP Korean Live Radio Page Header Navigation link should match text and url 5`] = `
{
  "text": "TOP 뉴스",
  "url": "/korean/popular/read",
}
`;

exports[`AMP Korean Live Radio Page Main heading should match text 1`] = `"내부 서버 에러"`;

exports[`AMP Korean Live Radio Page Media Player a11y assistive technology can read the media player title 1`] = `"오디오 플레이어"`;

exports[`AMP Korean Live Radio Page Media Player iframe with valid URL should be rendered 1`] = `"https://polling.test.bbc.co.uk/ws/av-embeds/media/bbc_korean_radio/liveradio/ko/amp?morph_env=live"`;

exports[`AMP Korean Live Radio Page SEO Canonical link 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`AMP Korean Live Radio Page SEO Dir attribute 1`] = `"ltr"`;

exports[`AMP Korean Live Radio Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`AMP Korean Live Radio Page SEO Heading level 1 1`] = `"내부 서버 에러"`;

exports[`AMP Korean Live Radio Page SEO Lang attribute 1`] = `"ko"`;

exports[`AMP Korean Live Radio Page SEO OG description 1`] = `"세계와 한반도 뉴스를 공정하고 객관적으로 전달해 드립니다"`;

exports[`AMP Korean Live Radio Page SEO OG image 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`AMP Korean Live Radio Page SEO OG image alt 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG locale 1`] = `"ko-KO"`;

exports[`AMP Korean Live Radio Page SEO OG site name 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG title 1`] = `"BBC 코리아 라디오 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO OG type 1`] = `"website"`;

exports[`AMP Korean Live Radio Page SEO OG url 1`] = `"http://localhost:7080/korean/bbc_korean_radio/liveradio"`;

exports[`AMP Korean Live Radio Page SEO Page title 1`] = `"내부 서버 에러 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO Robots meta tag 1`] = `"noindex,nofollow"`;

exports[`AMP Korean Live Radio Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`AMP Korean Live Radio Page SEO Twitter creator 1`] = `"@bbcnews"`;

exports[`AMP Korean Live Radio Page SEO Twitter description 1`] = `"내부 서버 에러"`;

exports[`AMP Korean Live Radio Page SEO Twitter image alt 1`] = `"BBC News 코리아"`;

exports[`AMP Korean Live Radio Page SEO Twitter image src 1`] = `"https://news.files.bbci.co.uk/ws/img/logos/og/korean.png"`;

exports[`AMP Korean Live Radio Page SEO Twitter site 1`] = `"@bbcnews"`;

exports[`AMP Korean Live Radio Page SEO Twitter title 1`] = `"내부 서버 에러 - BBC News 코리아"`;

exports[`AMP Korean Live Radio Page Summary should match text 1`] = `"죄송합니다. 페이지를 찾지 못했습니다. 이 중 하나를 시도해보세요:"`;
